<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/recording_instructions"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_weight="1.0"
    />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStart"
            android:text="@string/start_recording"
            android:layout_weight="1.0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStop"
            android:text="@string/stop_recording"
            android:layout_weight="1.0"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/retour"
        android:text="@string/retour"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.2"/>


</LinearLayout>
